fix layout issue in document list: https://bugzilla.redhat.com/show_bug.cgi?id=959819

--- a/zanata-war/src/main/resources/org/zanata/webtrans/public/Application.css
+++ b/zanata-war/src/main/resources/org/zanata/webtrans/public/Application.css
@@ -410,6 +410,7 @@ td.ApprovedStateDecoration div div div
 .DocumentListTable td.statisticCol {
 	font-size:14px;
 	text-align:center;
+	min-width:130px;
 }
 
 .DocumentListTable td.translatedCol {
